Fix app-nav height Hide single post button label on small screen

--- a/src/app/Header.scss
+++ b/src/app/Header.scss
@@ -91,6 +91,7 @@ header {
 .app-nav {
   overflow: hidden;
   height: 57px;
+  min-height: 57px;
   line-height: 50px;
   text-align: center;
   box-shadow: inset 0 -1px 0 #E7E7EC;
